Support for java 11